--- a/template_specialization.org
+++ b/template_specialization.org
@@ -1,26 +1,27 @@
+* An Example Program for Function template Specialization.
+
 #+BEGIN_SRC cpp
-  # include <bits/stdc++.h>
+  #include <iostream>
   using namespace std;
 
-  template <class T>
+  template<class T>
   void fun(T a){
-  cout << "The main template fun(): " << a << endl;
+    cout <<"The main template fun():"<< a << endl;
   }
 
   template<>
   void fun(int a){
-    cout << "Specialized template for int type: " << a << endl;
+    cout << "Specialized template for int type:" << a << endl;
   }
 
   int main(){
-    fun<char> ('a');
+    fun<char>('a');
     fun<int>(10);
     fun<float>(10.14);es
-
   }
 #+END_SRC
 
 #+RESULTS:
-| The         | main     | template | fun(): | a     |    |
-| Specialized | template | for      | int    | type: | 10 |
-| The         | main     | template | fun(): | 10.14 |    |
+| The         | main     | template | fun():a     |         |
+| Specialized | template | for      | int         | type:10 |
+| The         | main     | template | fun():10.14 |         |
